<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_margin="16dp"
             tools:context="com.handen.schoolhelper2.fragments.AboutFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/aboutApp" />

    <View
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bdbdbd"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/myContacts" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:autoLink="email"
        android:linksClickable="true"

        android:text="@string/gmail"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:autoLink="web"
        android:linksClickable="true"

        android:text="@string/vk"
        android:layout_marginTop="4dp"
        android:textSize="14sp" />




</LinearLayout>
